dx/force-app/main/default/objects/ltng_TileLauncherEntryPreference__c/ltng_TileLauncherEntryPreference__c.object-meta.xml
<CustomObject>
    <description>User preference for a Tile Launcher Entry.
(Sort order or whether it is hidden or not, etc)</description>
    <label>Tile Launcher Entry Preference</label>
    <nameField>
        <displayFormat>tlep-{00000}</displayFormat>
        <label>Tile Launcher Entry Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tile Launcher Entry Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>