dx/force-app/main/default/objects/ltng_TileLauncherEntryPreference__c/fields/PreferredSortIndex__c.field-meta.xml
<CustomField>
    <fullName>PreferredSortIndex__c</fullName>
    <inlineHelpText>Lowest number QuickLink appears at the top (those without towards the bottom)</inlineHelpText>
    <label>Preferred Sort Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>