dx/force-app/main/default/objects/ltng_TileLauncherEntryPreference__c/fields/TileLauncherEntry__c.field-meta.xml
<CustomField>
    <fullName>TileLauncherEntry__c</fullName>
    <inlineHelpText>The tile Launcher Entry this relates to.</inlineHelpText>
    <label>Tile Launcher Entry</label>
    <referenceTo>ltng_TileLauncherEntry__c</referenceTo>
    <relationshipLabel>Tile Launcher Entry Preferences</relationshipLabel>
    <relationshipName>ltng_TileLauncherPreference</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>