dx/force-app/main/default/objects/ltng_TileLauncherEntryPreference__c/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID for the junction (used to simplify creation/updates)</inlineHelpText>
    <label>Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>