dx/force-app/main/default/objects/ltng_TileLauncherEntryPreference__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User this preference is for</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ltng_TileLauncherPreference</relationshipName>
    <type>Lookup</type>
</CustomField>